Expense component added (2023-01-20, 22.55)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,8 +8,12 @@
     </button>
 </div>
 <div class="mt-3">
-    <button type="button" class="btn btn-danger">Gider Ekle</button>
-    <button type="button" class="btn btn-danger ms-3">Giderleri Listele</button>
+    <button type="button" class="btn btn-danger" routerLink="/add-expense">
+        Gider Ekle
+    </button>
+    <button type="button" class="btn btn-danger ms-3">
+        Giderleri Listele
+    </button>
 </div>
 
 <!-- Income Part -->
