--- a/src/app/pages/expense-detail/expense-detail.component.html
+++ b/src/app/pages/expense-detail/expense-detail.component.html
@@ -28,5 +28,15 @@
             placeholder="Açıklama">
         <label for="inputExpenseDate">Açıklama</label>
     </div>
-    <button type="button">Güncelle</button>
+    <button type="button" [class]="updateButtonClass()" (click)="put()">Güncelle</button>
+    <button type="button" (click)="clickedDeleteButton()" class="btn btn-danger ms-3 mt-3">
+        Gideri Sil
+    </button>
+    <div class="mt-3" *ngIf="isClickedDeleteButton">
+        <strong class="text-danger">Bu gideri silmek istediğinize emin misiniz?</strong>
+        <br>
+        <button type="button" (click)="delete()" class="btn btn-danger mt-1">
+            Evet, eminim
+        </button>
+    </div>
 </div>
